C/HELLO_WORLD/HelloWorldErrors
HelloWorld.c: In function ‘main’:
HelloWorld.c:4:34: error: expected ‘)’ before ‘;’ token
    4 |   printf("Hellooooooooo World!!!";
      |                                  ^
      |                                  )
HelloWorld.c:5:12: error: expected ‘;’ before ‘}’ token
    5 |   return 0;
      |            ^
      |            ;
    6 | }
      | ~           
